added a text align to my header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Alex Hdz Portfolio</title>
 </head>
 <body>
+    <header style="text-align: center;">
+        <h1>AlexHdz Portfolio</h1>
+    </header>
     
 </body>
 </html>
