added menu and created 3 other pages
added an inline list with links to 3 other pages "About", "My Work", "Contact"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <body>
     <header style="text-align: center;">
         <h1>AlexHdz Portfolio</h1>
+        <nav>
+            <ul style="list-style-type: none;">
+                <li style="display: inline;">
+                    <a href="./Menu/About.html">About</a>
+                </li>
+                <li style="display: inline;">
+                    <a href="./Menu/My Work.html">My Work</a>
+                </li>
+                <li style="display: inline;">
+                    <a href="./Menu/Contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     
 </body>
