--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Alex Hdz Portfolio</title>
 </head>
 <body>
-    <header style="text-align: center;">
+    <header style="text-align: center; margin-top: 50px;">
         <h1>AlexHdz Portfolio</h1>
         <nav>
             <ul style="list-style-type: none;">
-                <li style="display: inline;">
+                <li style="display: inline; margin: 15px;">
                     <a href="./Menu/About.html">About</a>
                 </li>
-                <li style="display: inline;">
+                <li style="display: inline; margin: 15px;">
                     <a href="./Menu/My Work.html">My Work</a>
                 </li>
-                <li style="display: inline;">
+                <li style="display: inline; margin: 15px;">
                     <a href="./Menu/Contact.html">Contact</a>
                 </li>
             </ul>
