--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             </ul>
         </nav>
     </header>
-    
+
+    <p>I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
+    <img src="./Pictures/Home-pic.png" alt="Guitar and amp in livingroom" style="display: block; width: 300px; height: auto;">
 </body>
 </html>
