added margin to image and change size
added an auto margin to the image and changed its size from 300 to 500 width

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </header>
 
     <p>I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
-    <img src="./Pictures/Home-pic.png" alt="Guitar and amp in livingroom" style="display: block; width: 300px; height: auto;">
+    <img src="./Pictures/Home-pic.png" alt="Guitar and amp in livingroom" style="display: block; margin: auto; width: 500px; height: auto;">
 </body>
 </html>
