--- a/Menu/About.html
+++ b/Menu/About.html
@@ -11,7 +11,7 @@
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
-                    <a href="./index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
                     <a href="./Menu/My Work.html">My Work</a>
