took pages out of folder
links were still not working so i took all the pages out of the folder "menu" and fixed the syntax in code to make it work

--- a/About.html
+++ b/About.html
@@ -10,14 +10,14 @@
         <h1>About me</h1>
         <nav>
             <ul style="list-style-type: none;">
-                <li style="display: inline; margin 15px;">
+                <li style="display: inline; margin: 15px;">
                     <a href="index.html">Home</a>
                 </li>
-                <li style="display: inline; margin 15px;">
-                    <a href="./My Work.html">My Work</a>
+                <li style="display: inline; margin: 15px;">
+                    <a href="My Work.html">My Work</a>
                 </li>
-                <li style="display: inline; margin 15px;">
-                    <a href="./Contact.html">Contact</a>
+                <li style="display: inline; margin: 15px;">
+                    <a href="Contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
