--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
-                    <a href="./Menu/About.html">About</a>
+                    <a href="About.html">About</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="./Menu/My Work.html">My Work</a>
+                    <a href="My Work.html">My Work</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="./Menu/Contact.html">Contact</a>
+                    <a href="Contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
