added H2 and paragraph
Added a second header and a paragraph with an about me text

--- a/About.html
+++ b/About.html
@@ -22,5 +22,9 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <h2>My name is Alex Hdz</h2>
+        <p>I am a seasoned photographer and videographer with over 11 years of experience in the industry. Originally from New York City and raised in Bogotá, Colombia, I moved to the United States at the age of 19 to pursue my professional career. I began my journey as a videographer and photographer, gradually advancing to roles as a video and photo editor. Eventually, I was promoted to lead my department, where I supervised other editors and ensured quality control for the company. Today, I continue to grow my expertise by attending SAIT University in Calgary, Alberta, where I am pursuing a degree in User Experience Design. </p>
+    </section>
 </body>
 </html>
