--- a/About.html
+++ b/About.html
@@ -8,6 +8,7 @@
 <body>
     <header style="text-align: center; margin-top: 50px;">
         <h1>About me</h1>
+        <!--Menu buttons-->
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
@@ -22,6 +23,7 @@
             </ul>
         </nav>
     </header>
+    <!--Description-->
     <section>
         <h2>My name is Alex Hdz</h2>
         <p>I am a seasoned photographer and videographer with over 11 years of experience in the industry. Originally from New York City and raised in Bogotá, Colombia, I moved to the United States at the age of 19 to pursue my professional career. I began my journey as a videographer and photographer, gradually advancing to roles as a video and photo editor. Eventually, I was promoted to lead my department, where I supervised other editors and ensured quality control for the company. Today, I continue to grow my expertise by attending SAIT University in Calgary, Alberta, where I am pursuing a degree in User Experience Design. </p>
