--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header style="text-align: center; margin-top: 50px;">
         <h1>AlexHdz Portfolio</h1>
+        <!--Menu Buttons-->
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
@@ -22,7 +23,7 @@
             </ul>
         </nav>
     </header>
-
+<!--Description-->
     <p style="text-align: center;">I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
     <img src="./Pictures/Home-pic.png" alt="Guitar and amp in livingroom" style="display: block; margin: auto; width: 500px; height: auto;">
 </body>
