--- a/About.html
+++ b/About.html
@@ -29,5 +29,18 @@
         <img src="./Pictures/_AX_5130-2.jpg" alt="Profile picture" style="width: 300px; height: auto;">
         <p>I am a seasoned photographer and videographer with over 11 years of experience in the industry. Originally from New York City and raised in Bogotá, Colombia, I moved to the United States at the age of 19 to pursue my professional career. I began my journey as a videographer and photographer, gradually advancing to roles as a video and photo editor. Eventually, I was promoted to lead my department, where I supervised other editors and ensured quality control for the company. Today, I continue to grow my expertise by attending <strong>SAIT University</strong> in Calgary, Alberta, where I am pursuing a degree in User Experience Design. </p>
     </section>
+    <!--Lists section-->
+    <section>
+        <h2>Skills</h2>
+        <ul style="list-style-type: none; display: flex;">
+            <li style="margin: 15px;"><strong>Video Editing</strong>
+                <ul style="list-style-type: circle;">
+                    <li>Proficient with Adobe software, specifically Premiere Pro.</li>
+                    <li>Experienced in motion graphics using Adobe After Effects.</li>
+                    <li>Skilled in Color correction and grading.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
