added another list
Added a photography list to the skills section

--- a/About.html
+++ b/About.html
@@ -40,6 +40,13 @@
                     <li>Skilled in Color correction and grading.</li>
                 </ul>
             </li>
+            <li style="margin: 15px;"><strong>Photography</strong>
+                <ul style="list-style-type: circle;">
+                    <li>Proficient with Adobe Lightroom and Photoshop for photo editing.</li>
+                    <li>Experienced in studio lighting Techniques.</li>
+                    <li>Experienced with DSLR cameras specifically both Sony alpha and Canon.</li>
+                </ul>
+            </li>
         </ul>
     </section>
 </body>
