added anotehr list
Added a third list to skills section

--- a/About.html
+++ b/About.html
@@ -47,6 +47,13 @@
                     <li>Experienced with DSLR cameras specifically both Sony alpha and Canon.</li>
                 </ul>
             </li>
+            <li style="margin: 15px;"><strong>Videography</strong>
+                <ul style="list-style-type: circle;">
+                    <li>Experienced with cinematography techniques.</li>
+                    <li>Proficient with camera stabilizers and rigs.</li>
+                    <li>Experienced with lighting techniques.</li>
+                </ul>
+            </li>
         </ul>
     </section>
 </body>
