--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
     <!--Description-->
     <section>
         <h2>My name is Alex Hdz</h2>
-        <img src="./Pictures/_AX_5130-2.jpg" alt="Profile picture" style="width: 300px; height: auto;">
+        <img src="./Pictures/_AX_5130-2.jpg" alt="man sitting with cup of coffee" style="width: 300px; height: auto;">
         <p>I am a seasoned photographer and videographer with over 11 years of experience in the industry. Originally from New York City and raised in Bogotá, Colombia, I moved to the United States at the age of 19 to pursue my professional career. I began my journey as a videographer and photographer, gradually advancing to roles as a video and photo editor. Eventually, I was promoted to lead my department, where I supervised other editors and ensured quality control for the company. Today, I continue to grow my expertise by attending <strong>SAIT University</strong> in Calgary, Alberta, where I am pursuing a degree in User Experience Design. </p>
     </section>
     <!--Lists section-->
