Added a title and short description
Added a title for the page and a short description of what to find

--- a/My Work.html
+++ b/My Work.html
@@ -23,5 +23,10 @@
             </ul>
         </nav>
     </header>
+    <!--Description section-->
+    <section>
+        <H2>Recent Work</H2>
+        <p>Welcome to my portfolio. Explore my most recent work, feuturing a collection that includes concert photography, lifestyle photography, and production photography.  </p>
+    </section>
 </body>
 </html>
