added a table with pictures
Created a subheading with a table with 3 pictures

--- a/My Work.html
+++ b/My Work.html
@@ -28,5 +28,25 @@
         <H2>Recent Work</H2>
         <p>Welcome to my portfolio. Explore my most recent work, feuturing a collection that includes concert photography, lifestyle photography, and production photography.  </p>
     </section>
+    <!--Image Content-->
+    <section>
+        <h3>Concert Photography</h3>
+    <table style="width: 100%; max-width: 800px; margin: 20px auto; border-collapse: collapse;">
+        <tr>
+            <td>
+                <img src="./Pictures/1_AX_4826.jpg" alt="Man with Guitar"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/2_AX_4903.jpg" alt="Man with Guitar on stage"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/3_AX_4971.jpg" alt="2 men on stage with guitar hugging"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
+       </table>
+       </section>
 </body>
 </html>
