added pictures to table
added more picture to table with 9 in total

--- a/My Work.html
+++ b/My Work.html
@@ -46,7 +46,36 @@
                 style="width: 100%; height: auto;">
             </td>
         </tr>
-       </table>
-       </section>
+        <tr>
+            <td>
+                <img src="./Pictures/4_AX_4716.jpg" alt="Band on stage performing"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/5_AX_4759.jpg" alt="Girl smiling on stage"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/6_AX_4764.jpg" alt="Girl with electric guitar singing"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="./Pictures/7_AX_4522.jpg" alt="Girl with acoustic guitar singing"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/8_AX_4516.jpg" alt="Girl playing acoustic guitar"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/9_AX_4513-Edit.jpg" alt="Girl on stage singing"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
+    </table>
+    </section>
+       
 </body>
 </html>
