changed the placement of h3 title
added a text-align to go with the table of images

--- a/My Work.html
+++ b/My Work.html
@@ -30,7 +30,7 @@
     </section>
     <!--Image Content-->
     <section>
-        <h3>Concert Photography</h3>
+        <h3 style="text-align: center;">Concert Photography</h3>
     <table style="width: 100%; max-width: 800px; margin: 20px auto; border-collapse: collapse;">
         <tr>
             <td>
