change order of pictures
change the order of pictures so they flow better on the table

--- a/My Work.html
+++ b/My Work.html
@@ -38,11 +38,11 @@
                 style="width: 100%; height: auto;">
             </td>
             <td>
-                <img src="./Pictures/2_AX_4903.jpg" alt="Man with Guitar on stage"
+                <img src="./Pictures/3_AX_4971.jpg" alt="2 men on stage with guitar hugging"
                 style="width: 100%; height: auto;">
             </td>
             <td>
-                <img src="./Pictures/3_AX_4971.jpg" alt="2 men on stage with guitar hugging"
+                <img src="./Pictures/2_AX_4903.jpg" alt="Man with guitar singing"
                 style="width: 100%; height: auto;">
             </td>
         </tr>
