added another table and another subheading
added another subheading "lifestyle photography" aswell as adding a table with more pictures

--- a/My Work.html
+++ b/My Work.html
@@ -75,6 +75,33 @@
             </td>
         </tr>
     </table>
+    <h3 style="text-align: center;"><em>Lifestyle Photography</em></h3>
+    <table style="width: 100%; max-width: 800px; margin: 20px auto; border-collapse: collapse;">
+        <tr>
+            <td>
+                <img src="./Pictures/10_AX_5271.jpg" alt="hands holding coffee mug"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/11_AX_5313.jpg" alt="Man sipping coffee"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/12_AX_5276.jpg" alt="Man in coffee shop"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <im src="./Pictures/13_AX_5353.jpg" alt="Three people sitting on a couch smiling"
+                style="width: 100%; height: auto;">
+            </td>
+            <img src="./Pictures/14_AX_5369.jpg" alt="Girl crouching on top of couch"
+            style="width: 100%; height: auto;">
+        </tr>
+        <td>
+            <img src="./Pictures/15_AX_5392.jpg" alt="Three people siting on a couch"
+            style="width: 100%; height: auto;">
+        </td>
+    </table>
     </section>
        
 </body>
