fixed missing letter and table cell
a letter was missing from img, and there was a missing table cell "<td>"

--- a/My Work.html
+++ b/My Work.html
@@ -91,11 +91,13 @@
                 style="width: 100%; height: auto;">
             </td>
             <td>
-                <im src="./Pictures/13_AX_5353.jpg" alt="Three people sitting on a couch smiling"
+                <img src="./Pictures/13_AX_5353.jpg" alt="Three people sitting on a couch smiling"
                 style="width: 100%; height: auto;">
             </td>
-            <img src="./Pictures/14_AX_5369.jpg" alt="Girl crouching on top of couch"
-            style="width: 100%; height: auto;">
+            <td>
+                <img src="./Pictures/14_AX_5369.jpg" alt="Girl crouching on top of couch"
+                style="width: 100%; height: auto;">
+            </td>
         </tr>
         <td>
             <img src="./Pictures/15_AX_5392.jpg" alt="Three people siting on a couch"
