added more images
Added another row of images to the table

--- a/My Work.html
+++ b/My Work.html
@@ -105,6 +105,20 @@
                 style="width: 100%; height: auto;">
             </td>
         </tr>
+        <tr>
+            <td>
+                <img src="./Pictures/16_AX_5958.jpg" alt="Man smiling with guitar and a dog"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/17_AX_5965.jpg" alt="Man with guitar looking away"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/18_AX_6004.jpg" alt="Man with guitar smiling"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
     </table>
     </section>
        
