added another subheading with table
Added anotehr subheading "production photography" aswell as another table with multiple images

--- a/My Work.html
+++ b/My Work.html
@@ -120,6 +120,52 @@
             </td>
         </tr>
     </table>
+    <h3 style="text-align: center;"><em>Production Photography</em></h3>
+    <table style="width: 100%; max-width: 800px; margin: 20px auto; border-collapse: collapse;">
+        <tr>
+            <td>
+                <img src="./Pictures/19_AX_5561.jpg" alt="Two men sitting down setting up their instruments"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/20_AX_5592.jpg" alt="Two men sitting down waiting to start playing their guitars"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/21_AX_5672.jpg" alt="Man from behind waiting to start singing"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="./Pictures/22_AX_5832.jpg" alt="Man sitting down playing guitar"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/23_AX_5869.jpg" alt="Two men sitting down playing guitar"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/24_AX_5883.jpg" alt="Two men sitting down celebrating and smiling"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="./Pictures/25_AX_5431-2.jpg" alt="Man singing"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/26_AX_5705.jpg" alt="Two men sitting down waiting with guitars"
+                style="width: 100%; height: auto;">
+            </td>
+            <td>
+                <img src="./Pictures/27_AX_5584.jpg" alt="Man sitting down waiting to sing"
+                style="width: 100%; height: auto;">
+            </td>
+        </tr>
+    </table>
+
     </section>
        
 </body>
