added subheading and paragraph
added a subheading "where to find me" and included a paragraph with more info

--- a/Contact.html
+++ b/Contact.html
@@ -23,5 +23,11 @@
             </ul>
         </nav>
     </header>
+    <!--description-->
+    <section>
+        <h3>Where to find me</h3>
+        <p>If you want to get in touch with me feel free to use any of the following links.
+            Thank you for stopping by!</p>
+    </section>
 </body>
 </html>
