change table to list
Changed the table for a list instead

--- a/Contact.html
+++ b/Contact.html
@@ -25,26 +25,23 @@
     </header>
     <!--description-->
     <section>
-        <h3><em>Where to find me</em></h3>
+        <h3><em>Say hello</em></h3>
         <p>If you want to get in touch with me feel free to use any of the following links.</p>
         <p>Thank you for stopping by!</p>
-        <table style="width: 100%; max-width: 400px; margin: 20px auto; border-collapse: collapse;">
-            <tr>
-                <td>
-                    <strong>Email</strong>
-                    <p><em>Alex.hdz18216@gmail.com</em></p>
-                </td>
-                <td>
-                    <strong>Instagram</strong>
-                    <a href="https://www.instagram.com/alexhdz16/">@AlexHdz16</a>
-                </td>
-                <td>
-                    <strong>BeHance</strong>
-                    <a href="https://www.behance.net/AlexHdz16">AlexHdz16</a>
-                </td>
-            </tr>
-        </table>
-
+        <ul style="list-style-type: circle;">
+            <li>
+                <strong>Email:</strong>
+                <p><em>Alex.hdz18216</em></p>
+            </li>
+            <li>
+                <strong>Instagram:</strong>
+                <a href="https://www.instagram.com/alexhdz16/">@AlexHdz16</a>
+            </li>
+            <li>
+                <strong>BeHance:</strong>
+                <a href="https://www.behance.net/alexhdz16">AlexHdz16</a>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
