took paragraph out
took the <p> cell out because it looked weird

--- a/Contact.html
+++ b/Contact.html
@@ -31,7 +31,7 @@
         <ul style="list-style-type: circle;">
             <li>
                 <strong>Email:</strong>
-                <p><em>Alex.hdz18216</em></p>
+                <em>Alex.hdz18216</em>
             </li>
             <li>
                 <strong>Instagram:</strong>
