--- a/Contact.html
+++ b/Contact.html
@@ -28,6 +28,8 @@
         <h3><em>Say hello</em></h3>
         <p>If you want to get in touch with me feel free to use any of the following links.</p>
         <p>Thank you for stopping by!</p>
+    <!--list section-->
+        <h4><em>Where to find me</em></h4>
         <ul style="list-style-type: circle;">
             <li>
                 <strong>Email:</strong>
