--- a/Contact.html
+++ b/Contact.html
@@ -37,11 +37,11 @@
             </li>
             <li>
                 <strong>Instagram:</strong>
-                <a href="https://www.instagram.com/alexhdz16/">@AlexHdz16</a>
+                <a href="https://www.instagram.com/alexhdz16/" target="_blank">@AlexHdz16</a>
             </li>
             <li>
                 <strong>BeHance:</strong>
-                <a href="https://www.behance.net/alexhdz16">AlexHdz16</a>
+                <a href="https://www.behance.net/alexhdz16" target="_blank">AlexHdz16</a>
             </li>
         </ul>
     </section>
