changed placement of a <p> and added picture
Change the placement of a paragraph so it shows after the list and added a picture aswell

--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,6 @@
     <section>
         <h3><em>Say hello</em></h3>
         <p>If you want to get in touch with me feel free to use any of the following links.</p>
-        <p>Thank you for stopping by!</p>
     <!--list section-->
         <h4><em>Where to find me</em></h4>
         <ul style="list-style-type: circle;">
@@ -44,6 +43,8 @@
                 <a href="https://www.behance.net/alexhdz16" target="_blank">AlexHdz16</a>
             </li>
         </ul>
+        <p>Thank you for stopping by!</p>
+        <img src="./Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
 </body>
 </html>
