changed list type
Changed the list from un-organized to organized and added a margin of 15px

--- a/Contact.html
+++ b/Contact.html
@@ -29,7 +29,7 @@
         <p>If you want to get in touch with me feel free to use any of the following links.</p>
     <!--list section-->
         <h4><em>Where to find me</em></h4>
-        <ul style="list-style-type: circle;">
+        <ol style="margin: 15px;">
             <li>
                 <strong>Email:</strong>
                 <em>Alex.hdz18216</em>
@@ -42,7 +42,7 @@
                 <strong>BeHance:</strong>
                 <a href="https://www.behance.net/alexhdz16" target="_blank">AlexHdz16</a>
             </li>
-        </ul>
+        </ol>
         <p>Thank you for stopping by!</p>
         <img src="./Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
