changed a contact link
changed the behance profile link to my GitHub profile instead

--- a/Contact.html
+++ b/Contact.html
@@ -39,10 +39,11 @@
                 <a href="https://www.instagram.com/alexhdz16/" target="_blank">@AlexHdz16</a>
             </li>
             <li>
-                <strong>BeHance:</strong>
-                <a href="https://www.behance.net/alexhdz16" target="_blank">AlexHdz16</a>
+                <strong>GitHub:</strong>
+                <a href="https://github.com/AlexHdz16" target="_blank">AlexHdz16</a>
             </li>
         </ol>
+    <!--last picture and thank you-->
         <p>Thank you for stopping by!</p>
         <img src="./Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
