--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
-                    <a href="About.html">About</a>
+                    <a href="./about/index.html">About</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="My Work.html">My Work</a>
+                    <a href="./My_Work/index.html">My Work</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="Contact.html">Contact</a>
+                    <a href="./contact/index.html">Contact</a>
                 </li>
             </ul>
         </nav>
