changed the name of a page
change the name of "my work" page to get rid of the space

--- a/MyWork.html
+++ b/MyWork.html
@@ -12,13 +12,13 @@
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
-                    <a href="./index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="./About.html">About</a>
+                    <a href="About.html">About</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="./Contact.html">Contact</a>
+                    <a href="Contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
