--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
         <!--Menu Buttons-->
         <nav>
             <ul style="list-style-type: none;">
-                <li style="display: inline; margin: 15px;"></li>
+                <li style="display: inline; margin: 15px;">
                     <a href="index.html">Home</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
