changed the style of paragraph and image
changed the paragraph in my about page and created a table instead so the text can be in one side and the image in the other

--- a/About.html
+++ b/About.html
@@ -26,8 +26,16 @@
     <!--Description-->
     <section>
         <h2>My name is Alex Hdz</h2>
-        <img src="./Pictures/_AX_5130-2.jpg" alt="man sitting with cup of coffee" style="width: 300px; height: auto;">
-        <p>I am a seasoned photographer and videographer with over 11 years of experience in the industry. Originally from New York City and raised in Bogotá, Colombia, I moved to the United States at the age of 19 to pursue my professional career. I began my journey as a videographer and photographer, gradually advancing to roles as a video and photo editor. Eventually, I was promoted to lead my department, where I supervised other editors and ensured quality control for the company. Today, I continue to grow my expertise by attending <strong>SAIT University</strong> in Calgary, Alberta, where I am pursuing a degree in User Experience Design. </p>
+        <table style="width: 100%; margin: auto; border-collapse: collapse;">
+            <tr>
+                <td style="width: 30%; text-align: left;">
+                    <p>I am a seasoned photographer and videographer with over 11 years of experience in the industry. Originally from New York City and raised in Bogotá, Colombia, I moved to the United States at the age of 19 to pursue my professional career. I began my journey as a videographer and photographer, gradually advancing to roles as a video and photo editor. Eventually, I was promoted to lead my department, where I supervised other editors and ensured quality control for the company. Today, I continue to grow my expertise by attending <strong>SAIT University</strong> in Calgary, Alberta, where I am pursuing a degree in User Experience Design.</p>
+                </td>
+                <td style="width: 20%; text-align: center;">
+                    <img src="./Pictures/_AX_5130-2.jpg" alt="man sitting with cup of coffee" style="width: 300px; height: auto;">
+                </td>
+            </tr>
+        </table>
     </section>
     <!--Lists section-->
     <section>
