--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
         <ol style="margin: 15px;">
             <li>
                 <strong>Email:</strong>
-                <em>Alex.hdz18216</em>
+                <em>Alex.hdz18216@gmail.com</em>
             </li>
             <li>
                 <strong>Instagram:</strong>
