Added page to all menus
Menu kept changing depending on what page you were so i kept the menu organized by adding a link to the same page on each one

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <nav>
             <ul style="list-style-type: none;">
                 <li style="display: inline; margin: 15px;">
+                    <a href="index.html">Home</a>
+                </li>
+                <li style="display: inline; margin: 15px;">
                     <a href="About.html">About</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
