--- a/About.html
+++ b/About.html
@@ -15,6 +15,9 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
+                    <a href="About.html">About</a>
+                </li>
+                <li style="display: inline; margin: 15px;">
                     <a href="MyWork.html">My Work</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
