--- a/Contact.html
+++ b/Contact.html
@@ -14,11 +14,14 @@
                 <li style="display: inline; margin: 15px;">
                     <a href="index.html">Home</a>
                 </li>
+                <li style="display: inline; margin: 15px;"></li>
+                    <a href="About.html">About</a>
+                </li>
                 <li style="display: inline; margin: 15px;">
                     <a href="MyWork.html">My Work</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
-                    <a href="About.html">About</a>
+                    <a href="Contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
