--- a/MyWork.html
+++ b/MyWork.html
@@ -17,6 +17,9 @@
                 <li style="display: inline; margin: 15px;">
                     <a href="About.html">About</a>
                 </li>
+                <li style="display: inline; margin 15px">
+                    <a href="MyWork.html">My Work</a>
+                </li>
                 <li style="display: inline; margin: 15px;">
                     <a href="Contact.html">Contact</a>
                 </li>
