--- a/MyWork.html
+++ b/MyWork.html
@@ -17,7 +17,7 @@
                 <li style="display: inline; margin: 15px;">
                     <a href="About.html">About</a>
                 </li>
-                <li style="display: inline; margin 15px">
+                <li style="display: inline; margin: 15px;">
                     <a href="MyWork.html">My Work</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
