--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
                 <li style="display: inline; margin: 15px;">
                     <a href="index.html">Home</a>
                 </li>
-                <li style="display: inline; margin: 15px;"></li>
+                <li style="display: inline; margin: 15px;">
                     <a href="About.html">About</a>
                 </li>
                 <li style="display: inline; margin: 15px;">
