--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </header>
 <!--Description-->
     <p style="text-align: center;">I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
-    <img src="./Pictures/Home-pic.png" alt="Guitar and amp in livingroom" style="display: block; margin: auto; width: 500px; height: auto;">
+    <img src="./Pictures/PXL_20230205_224742636.jpg" alt="Man holding camera" style="display: block; margin: auto; width: 500px; height: auto;">
 </body>
 </html>
