--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 <!--Description-->
-    <p style="text-align: center;">I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
+    <p style="text-align: center; margin-top: 50px;">I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
     <img src="./Pictures/PXL_20230205_224742636.jpg" alt="Man holding camera" style="display: block; margin: auto; width: 500px; height: auto;">
 </body>
 </html>
