separate line for style on picture
for some reason my image wont show on the publish link so im trying anything to explain why some images do work on others dont

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
 <!--Description-->
     <p style="text-align: center; margin-top: 50px;">I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
-    <img src="./Pictures/_AX_8788.jpg" alt="Camera on top of table" style="display: block; margin: auto; width: 500px; height: auto;">
+    <img src="./Pictures/_AX_8788.jpg" alt="Camera on top of table" 
+    style="display: block; margin: auto; width: 500px; height: auto;">
 </body>
 </html>
