change image path in contact page
seems to be working for the home page som im changing the contact picture as well because it wasnt working either

--- a/Contact.html
+++ b/Contact.html
@@ -48,7 +48,7 @@
         </ol>
     <!--last picture and thank you-->
         <p>Thank you for stopping by!</p>
-        <img src="./Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
+        <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
 </body>
 </html>
