--- a/About.html
+++ b/About.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/About.css"> 
     <title>About</title>
 </head>
 <body>
     <header style="text-align: center; margin-top: 50px;">
-        <h1>About me</h1>
+        <h1>About Me</h1>
         <!--Menu buttons-->
         <nav>
             <ul style="list-style-type: none;">
