--- a/About.html
+++ b/About.html
@@ -42,7 +42,7 @@
         </table>
     </section>
     <!--Lists section-->
-    <section>
+    <section id="skills-section">
         <h2>Skills</h2>
         <ul style="list-style-type: none; display: flex;">
             <li style="margin: 15px;"><strong>Video Editing</strong>
