changed them back to ol
change it back to organized because it affected the menu nav as well

--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,7 @@
         <p>If you want to get in touch with me feel free to use any of the following links.</p>
     <!--list section-->
         <h4><em>Where to find me</em></h4>
-        <ul style="margin: 15px;">
+        <ol style="margin: 15px;">
             <li>
                 <strong>Email:</strong>
                 <em>Alex.hdz18216@gmail.com</em>
@@ -46,7 +46,7 @@
                 <strong>GitHub:</strong>
                 <a href="https://github.com/AlexHdz16" target="_blank">AlexHdz16</a>
             </li>
-        </ul>
+        </ol>
     <!--last picture and thank you-->
         <p>Thank you for stopping by!</p>
         <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
