changed link in contact list

--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
         <ul class="contact-list" style="margin: 15px;">
             <li>
                 <strong>Email:</strong>
-                <em>Alex.hdz18216@gmail.com</em>
+                <a href="mailto:Alex.hdz18216@gmail.com"><em>Alex.hdz18216@gmail.com</em></a>
             </li>
             <li>
                 <strong>Instagram:</strong>
