--- a/MyWork.html
+++ b/MyWork.html
@@ -171,6 +171,14 @@
     </table>
 
     </section>
+    <footer id="site-footer">
+        <p>&copy; 2024 AlexHdz. Thanks for visiting.</p>
+        <p>
+            <a href="https://github.com/AlexHdz16" target="_blank">GitHub</a> |
+            <a href="https://www.instagram.com/alexhdz16/" target="_blank">Instagram</a> |
+            <a href="mailto:Alex.hdz18216@gmail.com">Email Me</a>
+        </p>
+    </footer>
        
 </body>
 </html>
