--- a/Contact.html
+++ b/Contact.html
@@ -51,5 +51,13 @@
         <p>Thank you for stopping by!</p>
         <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
+    <footer id="site-footer">
+        <p>&copy; 2024 AlexHdz. Thanks for visiting.</p>
+        <p>
+            <a href="https://github.com/AlexHdz16" target="_blank">GitHub</a> |
+            <a href="https://www.instagram.com/alexhdz16/" target="_blank">Instagram</a> |
+            <a href="mailto:Alex.hdz18216@gmail.com">Email Me</a>
+        </p>
+    </footer>
 </body>
 </html>
