wrapped text in main element
footer wasnt working for my home page so i wrapped my text in <main element> to see if it helps

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             </ul>
         </nav>
     </header>
-<!--Description-->
-    <p style="text-align: center; margin-top: 50px;">I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
-    <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_8788.jpg" alt="Camera on top of table" 
-    style="display: block; margin: auto; width: 500px; height: auto;">
+    <main style="flex: 1;">
+        <p>I'm Alex, welcome to my photography portfolio. Feel free to look around and don't forget to check my contact page for more information on where to find me!</p>
+        <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_8788.jpg" alt="Camera on top of table" 
+        style="display: block; margin: auto; width: 500px; height: auto;">
+    </main>
 
     <footer id="site-footer">
         <p>&copy; 2024 AlexHdz. Thanks for visiting.</p>
