added id element
added an id element to link it with the greeting on .js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="./JavaScript/home.js"></script>
 </head>
 <body>
+    <div id="greeting"></div>
     <header style="text-align: center; margin-top: 50px;">
         <h1>Alex Hdz Portfolio</h1>
         <!--Menu Buttons-->
