--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer id="site-footer">
-        <p>&copy; 2024 AlexHdz. Thanks for visiting.</p>
+        <p>&copy; <span id="current-year"></span> AlexHdz. Thanks for visiting.</p>
         <p>
             <a href="https://github.com/AlexHdz16" target="_blank">GitHub</a> |
             <a href="https://www.instagram.com/alexhdz16/" target="_blank">Instagram</a> |
