linked with about.js
linked html to .js

--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/About.css"> 
     <title>About</title>
+    <script defer src="./JavaScript/about.js"></script>
 </head>
 <body>
     <header style="text-align: center; margin-top: 50px;">
