created and linked .js
created a js page for "mywork" and linked it with the html

--- a/MyWork.html
+++ b/MyWork.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Work.css">
     <title>My Work</title>
+    <script defer src="./JavaScript/work.js"></script>
 </head>
 <body>
     <header style="text-align: center; margin-top: 50px;">
