--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Contact.css">
     <title>Contact</title>
+    <script defer src="./JavaScript/contact.js"></script>
 </head>
 <body>
     <header style="text-align: center; margin-top: 50px;">
