--- a/Contact.html
+++ b/Contact.html
@@ -53,7 +53,7 @@
         <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
     <footer id="site-footer">
-        <p>&copy; 2024 AlexHdz. Thanks for visiting.</p>
+        <p>&copy; <span id="current-year"></span> AlexHdz. Thanks for visiting.</p>
         <p>
             <a href="https://github.com/AlexHdz16" target="_blank">GitHub</a> |
             <a href="https://www.instagram.com/alexhdz16/" target="_blank">Instagram</a> |
