created a button alert
added a button alert to my work page

--- a/MyWork.html
+++ b/MyWork.html
@@ -30,6 +30,7 @@
     </header>
     <!--Description section-->
     <section>
+        <button id="btn-alert">Don't Click Me</button>
         <H2>Recent Work</H2>
         <p>Welcome to my portfolio. Explore my most recent work, feuturing a collection that includes concert photography, lifestyle photography, and production photography.  </p>
     </section>
