added the numbers list id
added the numbers list id element to my contact html page

--- a/Contact.html
+++ b/Contact.html
@@ -52,6 +52,13 @@
         <p>Thank you for stopping by!</p>
         <img src="https://raw.githubusercontent.com/AlexHdz16/HTML-Portfolio/main/Pictures/_AX_5889.jpg" alt="Dog laying down looking at camera" style="width: 300px; height: auto;">
     </section>
+    
+    <!--Numbers list-->
+    <section id="number-section">
+        <h2>Number List</h2>
+        <ol id="numbers"></ol> 
+    </section>
+    
     <footer id="site-footer">
         <p>&copy; <span id="current-year"></span> AlexHdz. Thanks for visiting.</p>
         <p>
